# Xuetangx

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
public/: .gitkeep
src/: App.tsx  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  ai.rs  article.rs  bank.rs  client.rs  commands.rs  courses.rs  crypto.rs  exercise.rs  forum.rs  lib.rs  login.rs  main.rs  state.rs  video.rs
src/components/: KindBadge.tsx  Sidebar.tsx  Toast.tsx  icons.tsx  ui.tsx
src/lib/: api.ts  videoState.ts
src/pages/: About.tsx  Accounts.tsx  Bank.tsx  Courses.tsx  Forum.tsx  Home.tsx  Homework.tsx  Login.tsx  Score.tsx  Settings.tsx  Video.tsx
