[package]
name = "xuetang-helper"
version = "0.1.0"
description = "学堂在线自动学习助手"
authors = ["captain"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xuetang_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
url = "2"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
async-trait = "0.1"
regex = "1"
html-escape = "0.2"
urlencoding = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
